Commit to master 29/08/2025 10:56

--- a/new-games/index.html
+++ b/new-games/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html><html zontal-theme="dark" lang="en-US" class="dark"><head><meta charset="utf-8"><title>New games on Stick It to the Stickman</title><meta name="description" content="The collection of new games on Stick It to the Stickman"><meta name="keywords" content="new games"><meta name="title" content="New games on Stick It to the Stickman"><meta property="fb:app_id" content=""><meta property="og:title" content="New games on Stick It to the Stickman"><meta property="og:site_name" content="Stick It to the Stickman"><link rel="image_src" href="https://stickittothestickman.github.io/data/image/options/stickittothestickman.png" /><meta property="og:type" content="article" /><meta property="og:url" content="https://stickittothestickman.github.io/new-games" /><meta property="og:description" content="The collection of new games on Stick It to the Stickman" /><meta property="og:image" content="https://stickittothestickman.github.io/data/image/options/stickittothestickman.png" /> <meta name="viewport"
  content="width=device-width, initial-scale=1.0, minimal-ui, shrink-to-fit=no viewport-fit=cover"><meta name="apple-mobile-web-app-capable" content="yes"><meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"><meta name="apple-mobile-web-app-title" content="Stick It to the Stickman"><meta name="HandheldFriendly" content="true"/><meta name="mobile-web-app-capable" content="yes"/><link rel="shortcut icon" sizes="512x512"
  href="https://stickittothestickman.github.io/cache/data/image/options/favicon-s512x512.png"/><link rel="icon" type="image/x-icon" href="https://stickittothestickman.github.io/favicon.ico?v=3"><link rel="apple-touch-icon"
- href="https://stickittothestickman.github.io/cache/data/image/options/favicon-s512x512.png"><meta http-equiv="x-ua-compatible" content="ie=edge"><link rel="canonical" href="https://stickittothestickman.github.io/new-games" data-react-helmet="true"><script data-cfasync="false">var game_config = {
+ href="https://stickittothestickman.github.io/cache/data/image/options/favicon-s512x512.png"><meta http-equiv="x-ua-compatible" content="ie=edge"><link rel="canonical" href="https://stickittothestickman.github.io/new-games" data-react-helmet="true"><meta name="google-site-verification" content="GsfCAGSU0kNEa9VRGJ2i0y6DhTORRQ2rFuvwYPNTFCk" /><!-- Google tag (gtag.js) --><script async src="https://www.googletagmanager.com/gtag/js?id=G-NDZY91X628"></script><script>window.dataLayer = window.dataLayer || [];
+ function gtag(){dataLayer.push(arguments);}
+ gtag('js', new Date());
+
+ gtag('config', 'G-NDZY91X628');</script> <script data-cfasync="false">var game_config = {
  current_slug: '',
  home_page: 'stick-it-to-the-stickman',
  domain_url: 'https://stickittothestickman.github.io',
@@ -16,12 +20,60 @@
  rel="stylesheet" type="text/css"/><!-- style.css--></head><body class="__className_d65c78 __variable_05e5f9"><div class="min-h-screen dark:bg-gray-950 font-sans antialiased flex flex-col"><header class="w-full py-1 bg-white/95 dark:bg-gray-900 backdrop-blur-md border-b border-[#007b43]/10 relative z-50"><div class="container flex h-30 items-center justify-between"><div class="flex gap-8 md:gap-12"><a href="/" class="flex items-center space-x-3 group"><div class="relative rounded-xl shadow-lg shadow-[#007b43]/10"><img alt="Stick It to the Stickman" loading="lazy" decoding="async" data-nimg="1"
  class="transition-all duration-500 group-hover:scale-110 group-hover:rotate-[360deg]"
  style="color:transparent;object-fit: contain;max-height: 30px;"
- src="/cache/data/image/options/stickittothestickman-f200x80.webp" /></div></a></div><div class="flex items-center gap-4"><div class="relative w-full mx-auto px-3 md:px-6 search-results"><div class="relative "><input type="text" placeholder="Search Games ..." id="search_txt"
+ src="/cache/data/image/options/stickittothestickman-f200x80.webp" /></div></a></div><div class="flex items-center gap-4"><nav class="navbar-nav d-none xl:flex"><a href="/"><span>Stick It to the Stickman </span></a></nav><div class="relative w-full mx-auto px-3 md:px-6 search-results"><div class="relative "><input type="text" placeholder="Search Games ..." id="search_txt"
  class="input_search w-full rounded-3xl transition-all duration-300 border-2 pl-9 pr-4 h-10 text-lg "
  autocomplete="off" /><button id="search_button"
  class="lucide lucide-search absolute top-1/2 -translate-y-1/2 transition-colors text-[#007b43]/70 left-2 w-7 h-7"><span class="svg-icon svelte-11lxo0l" aria-hidden="true"><svg class="svg-icon__link icon-search"><use xlink:href="#icon-search"></use></svg></span></button></div></div><!-- <button class="menu inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 border border-input bg-background hover:bg-accent h-10 w-10 transition-all duration-300"
  aria-label="Menu" type="button"><span class="svg-icon" aria-hidden="true"><svg class="svg-icon__link"><use xlink:href="#icon-menu"></use></svg></span></button> --></div></div></header><script type="application/ld+json">[{"@context":"https://schema.org","@type":"BreadcrumbList","itemListElement":[{"@type":"ListItem","position":1,"name":"Stick It to the Stickman","item":"https://stickittothestickman.github.io"},{"@type":"ListItem","position":2,"name":"New Games","item":"https://stickittothestickman.github.io/new-games"}]}]
-</script><div class="relative"><div class="max-w-7xl mx-auto"><div class="flex h-full"><div class="flex-1 2xl:ml-[0] w-full mx-auto px-3 md:px-12 py-3 md:py-12 layout-left"><div class="w-full mx-auto mb-4 p-0"><h1 class="text-3xl font-bold font-heading">New Games</h1><div class="mt-2 w-20 h-1 divider rounded-full"></div></div><div class="games-list" id="all-games"><div class="grid grid-cols-2 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-5 gap-4"><a href="/"
+</script><div class="relative"><div class="max-w-7xl mx-auto"><div class="flex h-full"><div class="flex-1 2xl:ml-[0] w-full mx-auto px-3 md:px-12 py-3 md:py-12 layout-left"><div class="w-full mx-auto mb-4 p-0"><h1 class="text-3xl font-bold font-heading">New Games</h1><div class="mt-2 w-20 h-1 divider rounded-full"></div></div><div class="games-list" id="all-games"><div class="grid grid-cols-2 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-5 gap-4"><a href="/stickman-run"
+ class="thumb-card relative group relative block h-full overflow-hidden rounded-xl bg-white/95 dark:bg-neutral-900/95 backdrop-blur-md shadow-lg hover:shadow-2xl transform transition-all duration-300 hover:-translate-y-1.5 will-change-transform"><div class="w-full overflow-hidden"><img
+ src="/resources/images/placeholder-m100x100.webp"
+ data-src="/cache/data/image/no_image-m186x186.webp"
+ alt="Stickman Run"
+ sizes="(max-width: 640px) 50vw, (max-width: 1024px) 33vw, 20vw"
+ class="object-cover lazy" loading="lazy"/></div><div class="px-2 py-2 title-game"><span class="text-sm md:text-base font-medium text-[#007b43] group-hover:text-[#00a35a] transition-colors duration-300 line-clamp-2">Stickman Run</span></div></a><a href="/stickman-dragon-fight"
+ class="thumb-card relative group relative block h-full overflow-hidden rounded-xl bg-white/95 dark:bg-neutral-900/95 backdrop-blur-md shadow-lg hover:shadow-2xl transform transition-all duration-300 hover:-translate-y-1.5 will-change-transform"><div class="w-full overflow-hidden"><img
+ src="/resources/images/placeholder-m100x100.webp"
+ data-src="/cache/data/image/no_image-m186x186.webp"
+ alt="Stickman Dragon Fight"
+ sizes="(max-width: 640px) 50vw, (max-width: 1024px) 33vw, 20vw"
+ class="object-cover lazy" loading="lazy"/></div><div class="px-2 py-2 title-game"><span class="text-sm md:text-base font-medium text-[#007b43] group-hover:text-[#00a35a] transition-colors duration-300 line-clamp-2">Stickman Dragon Fight</span></div></a><a href="/ragdoll-hit"
+ class="thumb-card relative group relative block h-full overflow-hidden rounded-xl bg-white/95 dark:bg-neutral-900/95 backdrop-blur-md shadow-lg hover:shadow-2xl transform transition-all duration-300 hover:-translate-y-1.5 will-change-transform"><div class="w-full overflow-hidden"><img
+ src="/resources/images/placeholder-m100x100.webp"
+ data-src="/cache/data/image/game/ragdoll-hit/ragdoll-hit-m186x186.webp"
+ alt="Ragdoll Hit"
+ sizes="(max-width: 640px) 50vw, (max-width: 1024px) 33vw, 20vw"
+ class="object-cover lazy" loading="lazy"/></div><div class="px-2 py-2 title-game"><span class="text-sm md:text-base font-medium text-[#007b43] group-hover:text-[#00a35a] transition-colors duration-300 line-clamp-2">Ragdoll Hit</span></div></a><a href="/ragdoll-playground"
+ class="thumb-card relative group relative block h-full overflow-hidden rounded-xl bg-white/95 dark:bg-neutral-900/95 backdrop-blur-md shadow-lg hover:shadow-2xl transform transition-all duration-300 hover:-translate-y-1.5 will-change-transform"><div class="w-full overflow-hidden"><img
+ src="/resources/images/placeholder-m100x100.webp"
+ data-src="/cache/data/image/game/ragdoll-playground/ragdoll-playground-m186x186.webp"
+ alt="Ragdoll Playground"
+ sizes="(max-width: 640px) 50vw, (max-width: 1024px) 33vw, 20vw"
+ class="object-cover lazy" loading="lazy"/></div><div class="px-2 py-2 title-game"><span class="text-sm md:text-base font-medium text-[#007b43] group-hover:text-[#00a35a] transition-colors duration-300 line-clamp-2">Ragdoll Playground</span></div></a><a href="/ragdoll-hit-stickman"
+ class="thumb-card relative group relative block h-full overflow-hidden rounded-xl bg-white/95 dark:bg-neutral-900/95 backdrop-blur-md shadow-lg hover:shadow-2xl transform transition-all duration-300 hover:-translate-y-1.5 will-change-transform"><div class="w-full overflow-hidden"><img
+ src="/resources/images/placeholder-m100x100.webp"
+ data-src="/cache/data/image/game/ragdoll-hit-stickman/ragdoll-hit-stickman-m186x186.webp"
+ alt="Ragdoll Hit Stickman"
+ sizes="(max-width: 640px) 50vw, (max-width: 1024px) 33vw, 20vw"
+ class="object-cover lazy" loading="lazy"/></div><div class="px-2 py-2 title-game"><span class="text-sm md:text-base font-medium text-[#007b43] group-hover:text-[#00a35a] transition-colors duration-300 line-clamp-2">Ragdoll Hit Stickman</span></div></a><a href="/icy-dash"
+ class="thumb-card relative group relative block h-full overflow-hidden rounded-xl bg-white/95 dark:bg-neutral-900/95 backdrop-blur-md shadow-lg hover:shadow-2xl transform transition-all duration-300 hover:-translate-y-1.5 will-change-transform"><div class="w-full overflow-hidden"><img
+ src="/resources/images/placeholder-m100x100.webp"
+ data-src="/cache/data/image/game/icy-dash/icy-dash-game-m186x186.webp"
+ alt="Icy Dash"
+ sizes="(max-width: 640px) 50vw, (max-width: 1024px) 33vw, 20vw"
+ class="object-cover lazy" loading="lazy"/></div><div class="px-2 py-2 title-game"><span class="text-sm md:text-base font-medium text-[#007b43] group-hover:text-[#00a35a] transition-colors duration-300 line-clamp-2">Icy Dash</span></div></a><a href="/stickman-archero-fight"
+ class="thumb-card relative group relative block h-full overflow-hidden rounded-xl bg-white/95 dark:bg-neutral-900/95 backdrop-blur-md shadow-lg hover:shadow-2xl transform transition-all duration-300 hover:-translate-y-1.5 will-change-transform"><div class="w-full overflow-hidden"><img
+ src="/resources/images/placeholder-m100x100.webp"
+ data-src="/cache/data/image/game/stickman-archero-fight/stickman-archero-fight-m186x186.webp"
+ alt="Stickman Archero Fight"
+ sizes="(max-width: 640px) 50vw, (max-width: 1024px) 33vw, 20vw"
+ class="object-cover lazy" loading="lazy"/></div><div class="px-2 py-2 title-game"><span class="text-sm md:text-base font-medium text-[#007b43] group-hover:text-[#00a35a] transition-colors duration-300 line-clamp-2">Stickman Archero Fight</span></div></a><a href="/stickman-racing"
+ class="thumb-card relative group relative block h-full overflow-hidden rounded-xl bg-white/95 dark:bg-neutral-900/95 backdrop-blur-md shadow-lg hover:shadow-2xl transform transition-all duration-300 hover:-translate-y-1.5 will-change-transform"><div class="w-full overflow-hidden"><img
+ src="/resources/images/placeholder-m100x100.webp"
+ data-src="/cache/data/image/game/stickman-racing/stickman-racing-1200x1200-m186x186.webp"
+ alt="Stickman Racing"
+ sizes="(max-width: 640px) 50vw, (max-width: 1024px) 33vw, 20vw"
+ class="object-cover lazy" loading="lazy"/></div><div class="px-2 py-2 title-game"><span class="text-sm md:text-base font-medium text-[#007b43] group-hover:text-[#00a35a] transition-colors duration-300 line-clamp-2">Stickman Racing</span></div></a><a href="/"
  class="thumb-card relative group relative block h-full overflow-hidden rounded-xl bg-white/95 dark:bg-neutral-900/95 backdrop-blur-md shadow-lg hover:shadow-2xl transform transition-all duration-300 hover:-translate-y-1.5 will-change-transform"><div class="w-full overflow-hidden"><img
  src="/resources/images/placeholder-m100x100.webp"
  data-src="/cache/data/image/game/stick-it-to-the-stickman/stickittothestickmangame-m186x186.webp"
